--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-date-picker": "^5.0.13",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-gifted-charts": "^1.4.65",
+    "react-native-keyboard-accessory": "^0.1.16",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "^4.14.1",
